# CMakeTest

./: README.md
myadd/: CMakeLists.txt  MathCalcConfig.cmake.in  mathcalc.cpp  myadd.cpp
myadd/LogBackup/: Log_First_CMake.txt  Operate_Log.md  log1.md
myadd/include/: muadd.h
