CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(MyInstall VERSION 1.1)

#生成动态库，使用下列
ADD_LIBRARY(myadd SHARED myadd.cpp)
TARGET_INCLUDE_DIRECTORIES(myadd PRIVATE ${CMAKE_SOURCE_DIR}/include)
SET_TARGET_PROPERTIES(myadd PROPERTIES PUBLIC_HEADER ${CMAKE_SOURCE_DIR}/include/myadd.h)

#生产科执行文件
ADD_EXECUTABLE(mathcalc mathcalc.cpp)
TARGET_LINK_LIBRARIES(mathcalc myadd)
TARGET_INCLUDE_DIRECTORIES(mathcalc PRIVATE ${CMAKE_SOURCE_DIR}/include)